# budget

./: .gitignore  LICENSE  config.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  extensions.py
app/forms/: account_forms.py  analysis_forms.py  auth_forms.py  budget_forms.py  transaction_forms.py
app/models/: __init__.py  account.py  base.py  budget.py  category.py  enums.py  expense_analysis.py  transaction.py  user.py  vendor.py
app/routes/: __init__.py  accounts.py  analysis.py  auth.py  budgets.py  main.py  transactions.py
app/services/: account_service.py  analysis_service.py  budget_service.py  seed_service.py  transaction_service.py
app/templates/: base.html  dashboard.html
app/templates/accounts/: form.html  list.html
app/templates/analysis/: form.html  list.html  report.html
app/templates/auth/: login.html  register.html
app/templates/budgets/: form.html  list.html
app/templates/errors/: 404.html  500.html
app/templates/transactions/: form.html  import.html  list.html
migrations/versions/: f44cfb8da620_initial_schema.py
tests/: conftest.py  test_models.py
tests/test_routes/: test_analysis_routes.py  test_auth_guards.py  test_auth_routes.py  test_dashboard.py  test_deactivate_routes.py  test_error_pages.py  test_transaction_recompute.py
tests/test_services/: test_account_service.py  test_analysis_service.py  test_budget_service.py  test_seed_service.py  test_transaction_service.py
